--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,4 +1,4 @@
-image: 'proboci/ubuntu-14.04-lamp:latest'
+image: 'proboci/ubuntu-14.04-lamp'
 steps:
   - name: Print shit
     command: echo 'WAT?!'
