Speedup test loop.

--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,9 +1,6 @@
 #image: 'proboci/ubuntu-14.04-lamp-beta'
 steps:
-  - name: Provision Drupal
-    plugin: Drupal
-    runInstall: standard
-    settingsRequireFile: 'site-settings.php'
-    settingsAppend: |
-      $bar = 'baz';
-      $foo = 'stuff';
+  - name: Make directory
+    command: mkdir /var/www/html
+  - name: Write file
+    commane: echo '<h1>Hello World!</h1>' > /var/www/html/index.html ; chown -R 777 /var/www/html
