--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,4 +1,5 @@
-#image: 'proboci/ubuntu-14.04-lamp-beta'
+assets:
+  - IMG_4950.jpeg
 steps:
 # - name: Provision Drupal
 #   plugin: Drupal
@@ -9,3 +10,5 @@ steps:
 #     $foo = 'stuff';
   - name: Second step
     command: printf '\033[0;31m [This should be red like a rose] \033[0m [This should not]</pre><script>alert("Do this alert?!");</script>'
+  - name: Write html
+    command: 'mkdir /var/www/html && mv /assets/IMG_4950.jpeg /var/www/html && echo "<img src=\'/IMG_4950.jpeg\'"'
