--- a/.probo.yaml
+++ b/.probo.yaml
@@ -11,4 +11,4 @@ steps:
   - name: Second step
     command: printf '\033[0;31m [This should be red like a rose] \033[0m [This should not]</pre><script>alert("Do this alert?!");</script>'
   - name: Write html
-    command: 'mkdir /var/www/html && mv /assets/IMG_4950.jpeg /var/www/html && echo "<img src=\'/IMG_4950.jpeg\'"'
+    command: "mkdir /var/www/html && mv /assets/IMG_4950.jpeg /var/www/html && echo \<img src='/IMG_4950.jpeg' \/\>"
