--- a/.probo.yaml
+++ b/.probo.yaml
@@ -1,8 +1,11 @@
-image: 'proboci/ubuntu-14.04-lamp-beta'
+allowAccessWhileBuilding: true
 steps:
-  - name: Provision Drupal
-    plugin: Drupal
-    runInstall: standard
-  - name: Check PWD
-    command: 'pwd'
-
+  - name: Sleep and setup a docroot
+    plugin: Script
+    script: |
+      mkdir -p /var/www/html
+      echo '<h1>This is a build</h1>' > /var/www/html/index.html
+      chmod 777 -R /var/www
+      sleep 6
+notifications:
+  webhook: http://localhost:6666
