--- a/.probo.yaml
+++ b/.probo.yaml
@@ -7,6 +7,11 @@ steps:
       echo '<h1>This is a build</h1>' > /var/www/html/index.html
       chmod 777 -R /var/www
       sleep 6
+  - name: Modify max packet size
+    plugin: Script
+    script: |
+      echo "[mysqld]\nmax_allowed_packet=16M " > /etc/mysql/my.cnf
+      service mysqld restart
 notifications:
   webhook: http://localhost:6666
 basicAuth:
